# Tavern-Sim

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  run.bat  run.py  settings.toml  verify_api.py
agents/: agent_manager.py  barkeep_agent.py  base_agent.py  narrator_agent.py  patron_agent.py
game/: action_log.py  bar_games.py  command_parser.py  config.py  drunk_filter.py  gemini_image_utils.py  image_generator.py  names.py  save_manager.py  session_setup.py  state.py
server/: app.py  game_session.py  messages.py  ws_handler.py
static/: game.css  game.js  index.html
templates/barkeeps/: dour_monk.json  gruff_veteran.json  jovial_brewer.json  lay_brother.json  motherly_alewife.json  retired_soldier.json  scarred_survivor.json  sly_merchant.json
templates/patrons/: bard.json  beggar.json  blacksmith.json  cutpurse.json  duder.json  farmer.json  friar.json  herbalist.json  laborer.json  madman.json  noble.json  pilgrim.json  plague_doctor.json  scholar.json  soldier.json  traveling_merchant.json
templates/taverns/: castle_town.json  forest_crossroads.json  harbor_dockside.json  merchant_quarter.json  monastery_guesthouse.json  rustic_inn.json
tools/: generate_portrait.py  test_image_generator.py
